--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -91,7 +91,7 @@
     <string name="pay">ادفع</string>
     <string name="subscription_payment_prompt_message_omt">لإعادة تنشيط حسابك، يرجى اتباع الخطوات التالية:\n\n1. قم بزيارة أقرب موقع OMT.\n2. قم بتوفير التفاصيل التالية:\n - بطاقة الهوية الخاصة بك\n - الاسم الأول\n - اسم العائلة\n - المبلغ: 10 دولارات أمريكية\n3. قم بتحويل المبلغ إلى رقم الهاتف: +96170123456.\n4. اجمع الإيصال بعد المعاملة.\n5. حدد موقع LTN (رقم التحويل المحلي) على الإيصال. إنه رمز مكون من 12 رقمًا.\n6. افتح التطبيق واضغط على الزر \'الدفع\'.\n7. أدخل التفاصيل التالية:\n - LTN\n - الاسم الأول\n - اسم العائلة\n8. سيتم إلغاء حظر حسابك عند إكماله بنجاح.\n\nنشكرك على تعاونك.</string>
     <string name="subscription_payment_prompt_message_whish">لإعادة تنشيط حسابك، يرجى اتباع الخطوات التالية:\n\n1. قم بزيارة أقرب موقع WHISH.\n2. قم بتوفير التفاصيل التالية:\n - بطاقة الهوية الخاصة بك\n - الاسم الأول\n - اسم العائلة\n - المبلغ: 10 دولارات أمريكية\n3. قم بتحويل المبلغ إلى رقم الهاتف: +96170123456.\n4. اجمع الإيصال بعد المعاملة.\n5. حدد موقع LTN (رقم التحويل المحلي) على الإيصال. إنه رمز مكون من 12 رقمًا.\n6. افتح التطبيق واضغط على الزر \'الدفع\'.\n7. أدخل التفاصيل التالية:\n - LTN\n - الاسم الأول\n - اسم العائلة\n8. سيتم إلغاء حظر حسابك عند إكماله بنجاح.\n\nنشكرك على تعاونك.</string>
-    <string name="payment_detials">بيانات الدفع</string>
+    <string name="payment_details">بيانات الدفع</string>
     <string name="ltn">LTN</string>
     <string name="first_name">الاسم الأول</string>
     <string name="last_name">اسم العائلة</string>
@@ -121,6 +121,11 @@
         <item>نظام الوقود</item>
         <item>العناصر الداخلية</item>
         <item>العناصر الخارجية</item>
+        <item>نظام الإضاءة</item>
+        <item>أجزاء وألواح الهيكل</item>
+        <item>العجلات والإطارات</item>
+        <item>التدفئة وتكييف الهواء</item>
+        <item>قطع الغيار بعد البيع وقطع الأداء</item>
     </string-array>
 
     <string-array name="categories_choices">
@@ -135,6 +140,11 @@
         <item>نظام الوقود</item>
         <item>العناصر الداخلية</item>
         <item>العناصر الخارجية</item>
+        <item>نظام الإضاءة</item>
+        <item>أجزاء وألواح الهيكل</item>
+        <item>العجلات والإطارات</item>
+        <item>التدفئة وتكييف الهواء</item>
+        <item>قطع الغيار بعد البيع وقطع الأداء</item>
     </string-array>
 
     <string-array name="subcategories">
@@ -142,26 +152,36 @@
         <item>التروس (يدوي أو أوتوماتيكي);القابض (للتروس اليدوية);صندوق التروس;عمود الدفع;التفاضلي;محاور;علبة التحويل (للدفع الرباعي)</item>
         <item>ممتصات الصدمات/الدعامات;نوابض (زنبرك);ذراع التحكم;قضبان التعادل;قضيب المقود;مضخة التوجيه;المفاصل الكروية;البوشات</item>
         <item>فرامل الفرجار;دواسات الفرامل;أقراص الفرامل (اسطوانة الكبح);خطوط الفرامل (مواسير);اسطوانة الفرامل الرئيسية;معزز للفرامل;مجموعة الفرامل اليدوية</item>
-        <item>البطارية;المولّد;محرك البدء;نظام الإشعال;كبلات التوصيل;الفيوزات والريلايات;الأضواء (أضواء الأمامية، أضواء الخلفية، إشارات التنبيه);الحساسات (حساسات نظام الفرامل المانعة للانغلاق، حساسات الأكسجين، إلخ)</item>
+        <item>البطارية;المولّد;محرك البدء;نظام الإشعال;كبلات التوصيل;الفيوزات والريلايات;الحساسات (حساسات نظام الفرامل المانعة للانغلاق، حساسات الأكسجين، إلخ)</item>
         <item>المبرّد (رادياتير);مضخة الماء;المحدّد الحراري (ترموستات);مراوح التبريد;الخراطيم;خزان السائل التبريدي</item>
         <item>أنابيب العادم (شكمان);المحول الحفاز;كاتم صوت;منظومة العادم (شكمان)</item>
         <item>خزان الوقود;مضخة الوقود;فلتر الوقود;حاقنات الوقود;جسم الدفع;فلتر الهواء</item>
         <item>المقاعد;لوحة القيادة;عجلة القيادة;مجموعة العدادات;نظام التدفئة والتهوية وتكييف الهواء;نظام الصوت</item>
-        <item>ألواح الهيكل;الصدامات;المرايا;الأبواب;النوافذ;نظام مساحات الزجاج وغسيلها</item>
+        <item>ألواح الهيكل;الصدامات;المرايا;النوافذ;نظام مساحات الزجاج وغسيلها</item>
+        <item>المصابيح الأمامية;المصابيح الخلفية;أضواء الفرامل;إشارات الانعطاف;أضواء الضباب;أضواء الداخلية</item>
+        <item>غطاء المحرك;الرفارف;الأبواب;غطاء الصندوق;السقف;ألواح الربع</item>
+        <item>العجلات (الحجم، المادة);الإطارات (الحجم، النوع - لكل الفصول، الأداء، إلخ.)</item>
+        <item>قلب التدفئة;ضاغط مكيف الهواء;المكثف;المبخر;موتور النفخ</item>
+        <item>أداء المحرك (المداخل، أنظمة العادم);تحديثات التعليق (ممتصات الصدمات، قضبان التوازن);العجلات والإطارات (إطارات الأداء، الجنوط);إكسسوارات الداخلية (مقابض التغيير، العدادات)</item>
     </string-array>
 
     <string-array name="subcategories_choices">
-        <item>اختر فئة فرعية</item>
-        <item>اختر فئة فرعية;بلوك الأسطوانة;المكابس;عمود المرفق;عمود الكامات;الصمامات;سير التوقيت/سلسلة التوقيت;منظومة السحب;منظومة العادم;حاقنات الوقود;شمعات الإشعال;وحدة التحكم بالمحرك (وحدة التحكم الإلكتروني للمحرك)</item>
-        <item>اختر فئة فرعية;التروس (يدوي أو أوتوماتيكي);القابض (للتروس اليدوية);صندوق التروس;عمود الدفع;التفاضلي;محاور;علبة التحويل (للدفع الرباعي)</item>
-        <item>اختر فئة فرعية;ممتصات الصدمات/الدعامات;نوابض (زنبرك);ذراع التحكم;قضبان التعادل;قضيب المقود;مضخة التوجيه;المفاصل الكروية;البوشات</item>
-        <item>اختر فئة فرعية;فرامل الفرجار;دواسات الفرامل;أقراص الفرامل (اسطوانة الكبح);خطوط الفرامل (مواسير);اسطوانة الفرامل الرئيسية;معزز للفرامل;مجموعة الفرامل اليدوية</item>
-        <item>اختر فئة فرعية;البطارية;المولّد;محرك البدء;نظام الإشعال;كبلات التوصيل;الفيوزات والريلايات;الأضواء (أضواء الأمامية، أضواء الخلفية، إشارات التنبيه);الحساسات (حساسات نظام الفرامل المانعة للانغلاق، حساسات الأكسجين، إلخ)</item>
-        <item>اختر فئة فرعية;المبرّد (رادياتير);مضخة الماء;المحدّد الحراري (ترموستات);مراوح التبريد;الخراطيم;خزان السائل التبريدي</item>
-        <item>اختر فئة فرعية;أنابيب العادم (شكمان);المحول الحفاز;كاتم صوت;منظومة العادم (شكمان)</item>
-        <item>اختر فئة فرعية;خزان الوقود;مضخة الوقود;فلتر الوقود;حاقنات الوقود;جسم الدفع;فلتر الهواء</item>
-        <item>اختر فئة فرعية;المقاعد;لوحة القيادة;عجلة القيادة;مجموعة العدادات;نظام التدفئة والتهوية وتكييف الهواء;نظام الصوت</item>
-        <item>اختر فئة فرعية;ألواح الهيكل;الصدامات;المرايا;الأبواب;النوافذ;نظام مساحات الزجاج وغسيلها</item>
+        <item>اختر الفئة الفرعية</item>
+        <item>اختر الفئة الفرعية;بلوك الأسطوانة;المكابس;عمود المرفق;عمود الكامات;الصمامات;سير التوقيت/سلسلة التوقيت;منظومة السحب;منظومة العادم;حاقنات الوقود;شمعات الإشعال;وحدة التحكم بالمحرك (وحدة التحكم الإلكتروني للمحرك)</item>
+        <item>اختر الفئة الفرعية;التروس (يدوي أو أوتوماتيكي);القابض (للتروس اليدوية);صندوق التروس;عمود الدفع;التفاضلي;محاور;علبة التحويل (للدفع الرباعي)</item>
+        <item>اختر الفئة الفرعية;ممتصات الصدمات/الدعامات;نوابض (زنبرك);ذراع التحكم;قضبان التعادل;قضيب المقود;مضخة التوجيه;المفاصل الكروية;البوشات</item>
+        <item>اختر الفئة الفرعية;فرامل الفرجار;دواسات الفرامل;أقراص الفرامل (اسطوانة الكبح);خطوط الفرامل (مواسير);اسطوانة الفرامل الرئيسية;معزز للفرامل;مجموعة الفرامل اليدوية</item>
+        <item>اختر الفئة الفرعية;البطارية;المولّد;محرك البدء;نظام الإشعال;كبلات التوصيل;الفيوزات والريلايات;الحساسات (حساسات نظام الفرامل المانعة للانغلاق، حساسات الأكسجين، إلخ)</item>
+        <item>اختر الفئة الفرعية;المبرّد (رادياتير);مضخة الماء;المحدّد الحراري (ترموستات);مراوح التبريد;الخراطيم;خزان السائل التبريدي</item>
+        <item>اختر الفئة الفرعية;أنابيب العادم (شكمان);المحول الحفاز;كاتم صوت;منظومة العادم (شكمان)</item>
+        <item>اختر الفئة الفرعية;خزان الوقود;مضخة الوقود;فلتر الوقود;حاقنات الوقود;جسم الدفع;فلتر الهواء</item>
+        <item>اختر الفئة الفرعية;المقاعد;لوحة القيادة;عجلة القيادة;مجموعة العدادات;نظام التدفئة والتهوية وتكييف الهواء;نظام الصوت</item>
+        <item>اختر الفئة الفرعية;ألواح الهيكل;الصدامات;المرايا;النوافذ;نظام مساحات الزجاج وغسيلها</item>
+        <item>اختر الفئة الفرعية;المصابيح الأمامية;المصابيح الخلفية;أضواء الفرامل;إشارات الانعطاف;أضواء الضباب;أضواء الداخلية</item>
+        <item>اختر الفئة الفرعية;غطاء المحرك;الرفارف;الأبواب;غطاء الصندوق;السقف;ألواح الربع</item>
+        <item>اختر الفئة الفرعية;العجلات (الحجم، المادة);الإطارات (الحجم، النوع - لكل الفصول، الأداء، إلخ.)</item>
+        <item>اختر الفئة الفرعية;قلب التدفئة;ضاغط مكيف الهواء;المكثف;المبخر;موتور النفخ</item>
+        <item>اختر الفئة الفرعية;أداء المحرك (المداخل، أنظمة العادم);تحديثات التعليق (ممتصات الصدمات، قضبان التوازن);العجلات والإطارات (إطارات الأداء، الجنوط);إكسسوارات الداخلية (مقابض التغيير، العدادات)</item>
     </string-array>
 
     <string-array name="condition_choices">
