--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,12 +90,12 @@
     <string name="pay">Pay</string>
     <string name="subscription_payment_prompt_message_omt">To reactivate your account, please follow these steps:\n\n1. Visit the nearest OMT location.\n2. Provide the following details:\n   - Your ID\n   - First Name\n   - Last Name\n   - Amount: 10 USD\n3. Transfer the amount to this phone number: +96170123456.\n4. Collect the receipt after the transaction.\n5. Locate the LTN (Local Transfer Number) on the receipt. It\'s a 12-digit code.\n6. Open the app and Press the \'Pay\' button.\n7. Enter the following details:\n   - LTN\n   - First Name\n   - Last Name\n8. Your account will be unblocked upon successful completion.\n\nThank you for your cooperation.</string>
     <string name="subscription_payment_prompt_message_whish">To reactivate your account, please follow these steps:\n\n1. Visit the nearest WHISH location.\n2. Provide the following details:\n   - Your ID\n   - First Name\n   - Last Name\n   - Amount: 10 USD\n3. Transfer the amount to this phone number: +96170123456.\n4. Collect the receipt after the transaction.\n5. Locate the LTN (Local Transfer Number) on the receipt. It\'s a 12-digit code.\n6. Open the app and Press the \'Pay\' button.\n7. Enter the following details:\n   - LTN\n   - First Name\n   - Last Name\n8. Your account will be unblocked upon successful completion.\n\nThank you for your cooperation.</string>
-    <string name="payment_detials">Payment Detials</string>
+    <string name="payment_details">Payment Details</string>
     <string name="ltn">LTN</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="subscription_completed">Subscription Completed!</string>
-    <string name="yearofxp">Years Of Experience:</string>
+    <string name="yearofxp">Years of Experience:</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
@@ -120,6 +120,11 @@
         <item>Fuel System</item>
         <item>Interior Components</item>
         <item>Exterior Components</item>
+        <item>Lighting System</item>
+        <item>Body Parts and Panels</item>
+        <item>Wheels and Tires</item>
+        <item>Heating and Air Conditioning</item>
+        <item>Aftermarket and Performance Parts</item>
     </string-array>
 
     <string-array name="categories_choices">
@@ -134,6 +139,11 @@
         <item>Fuel System</item>
         <item>Interior Components</item>
         <item>Exterior Components</item>
+        <item>Lighting System</item>
+        <item>Body Parts and Panels</item>
+        <item>Wheels and Tires</item>
+        <item>Heating and Air Conditioning</item>
+        <item>Aftermarket and Performance Parts</item>
     </string-array>
 
     <string-array name="subcategories">
@@ -141,12 +151,17 @@
         <item>Transmission (manual or automatic);Clutch (for manual transmission);Gearbox;Drive shafts;Differential;Axles;Transfer case (for 4-wheel drive)</item>
         <item>Shock absorbers/Struts;Springs;Control arms;Tie rods;Steering rack;Power steering pump;Ball joints;Bushings</item>
         <item>Brake calipers;Brake pads;Brake rotors;Brake lines;Brake master cylinder;Brake booster;Parking brake assembly</item>
-        <item>Battery;Alternator;Starter motor;Ignition system;Wiring harnesses;Fuses and relays;Lights (headlights, taillights, turn signals);Sensors (ABS sensors, oxygen sensors, etc.)</item>
+        <item>Battery;Alternator;Starter motor;Ignition system;Wiring harnesses;Fuses and relays;Sensors (ABS sensors, oxygen sensors, etc.)</item>
         <item>Radiator;Water pump;Thermostat;Cooling fans;Hoses;Coolant reservoir</item>
         <item>Exhaust pipes;Catalytic converter;Muffler;Exhaust manifold</item>
         <item>Fuel tank;Fuel pump;Fuel filter;Fuel injectors;Throttle body;Air filter</item>
         <item>Seats;Dashboard;Steering wheel;Instrument cluster;HVAC system (heating, ventilation, and air conditioning);Audio system</item>
-        <item>Body panels;Bumpers;Mirrors;Doors;Windows;Windshield wipers and washer system</item>
+        <item>Body panels;Bumpers;Mirrors;Windows;Windshield wipers and washer system</item>
+        <item>Headlights;Taillights;Brake Lights;Turn Signals;Fog Lights;Interior Lights</item>
+        <item>Hood;Fenders;Doors;Trunk Lid;Roof;Quarter Panels</item>
+        <item>Wheels (size, material);Tires (size, type - all-season, performance, etc.)</item>
+        <item>Heater Core;Air Conditioner Compressor;Condenser;Evaporator;Blower Motor</item>
+        <item>Engine Performance (intakes, exhaust systems);Suspension Upgrades (coilovers, sway bars);Wheels and Tires (performance tires, rims);Interior Accessories (shift knobs, gauges)</item>
     </string-array>
 
     <string-array name="subcategories_choices">
@@ -155,12 +170,17 @@
         <item>Select SubCategory;Transmission (manual or automatic);Clutch (for manual transmission);Gearbox;Drive shafts;Differential;Axles;Transfer case (for 4-wheel drive)</item>
         <item>Select SubCategory;Shock absorbers/Struts;Springs;Control arms;Tie rods;Steering rack;Power steering pump;Ball joints;Bushings</item>
         <item>Select SubCategory;Brake calipers;Brake pads;Brake rotors;Brake lines;Brake master cylinder;Brake booster;Parking brake assembly</item>
-        <item>Select SubCategory;Battery;Alternator;Starter motor;Ignition system;Wiring harnesses;Fuses and relays;Lights (headlights, taillights, turn signals);Sensors (ABS sensors, oxygen sensors, etc.)</item>
+        <item>Select SubCategory;Battery;Alternator;Starter motor;Ignition system;Wiring harnesses;Fuses and relays;Sensors (ABS sensors, oxygen sensors, etc.)</item>
         <item>Select SubCategory;Radiator;Water pump;Thermostat;Cooling fans;Hoses;Coolant reservoir</item>
         <item>Select SubCategory;Exhaust pipes;Catalytic converter;Muffler;Exhaust manifold</item>
         <item>Select SubCategory;Fuel tank;Fuel pump;Fuel filter;Fuel injectors;Throttle body;Air filter</item>
         <item>Select SubCategory;Seats;Dashboard;Steering wheel;Instrument cluster;HVAC system (heating, ventilation, and air conditioning);Audio system</item>
-        <item>Select SubCategory;Body panels;Bumpers;Mirrors;Doors;Windows;Windshield wipers and washer system</item>
+        <item>Select SubCategory;Body panels;Bumpers;Mirrors;Windows;Windshield wipers and washer system</item>
+        <item>Select SubCategory;Headlights;Taillights;Brake Lights;Turn Signals;Fog Lights;Interior Lights</item>
+        <item>Select SubCategory;Hood;Fenders;Doors;Trunk Lid;Roof;Quarter Panels</item>
+        <item>Select SubCategory;Wheels (size, material);Tires (size, type - all-season, performance, etc.)</item>
+        <item>Select SubCategory;Heater Core;Air Conditioner Compressor;Condenser;Evaporator;Blower Motor</item>
+        <item>Select SubCategory;Engine Performance (intakes, exhaust systems);Suspension Upgrades (coilovers, sway bars);Wheels and Tires (performance tires, rims);Interior Accessories (shift knobs, gauges)</item>
     </string-array>
 
     <string-array name="condition_choices">
