--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -96,6 +96,7 @@
     <string name="last_name">Last Name</string>
     <string name="subscription_completed">Subscription Completed!</string>
     <string name="yearofxp">Years of Experience:</string>
+    <string name="subscription">Subscription</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
