--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -97,6 +97,7 @@
     <string name="last_name">اسم العائلة</string>
     <string name="subscription_completed">اكتمل الاشتراك!</string>
     <string name="yearofxp">:سنوات الخبرة</string>
+    <string name="subscription">الاشتراك</string>
 
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
