--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,7 +116,7 @@
         <item>Choose Your Account Type</item>
         <item>General User</item>
         <item>Mechanic</item>
-        <item>Scrap-yard Vendor</item>
+        <item>Scrap-Yard Vendor</item>
     </string-array>
 
     <string-array name="Lang">
