--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -96,7 +96,7 @@
     <string name="last_name">Last Name</string>
     <string name="subscription_completed">Subscription Completed!</string>
     <string name="yearofxp">Years of Experience:</string>
-    <string name="subscription">Subscription</string>
+    <string name="subscription">Subscription:</string>
     <string name="add_part_description">Description</string>
     <string name="import_car_s_diagnostics">Import Car\'s Diagnostics</string>
     <string name="day">Day:</string>
