--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -111,6 +111,8 @@
     <string name="take_a_photo">Take a Photo</string>
     <string name="choose_from_gallery">Choose From Gallery</string>
     <string name="error_occurred">File transfer failed. Please check the connection and try again.</string>
+    <string name="delete_image">Delete Image!</string>
+    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
