--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -112,6 +112,8 @@
     <string name="take_a_photo">التقط صورة</string>
     <string name="choose_from_gallery">اختر من المعرض</string>
     <string name="error_occurred">فشل نقل الملف. الرجاء التحقق من الاتصال والمحاولة مرة أخرى.</string>
+    <string name="delete_image">حذف صورة!</string>
+    <string name="are_you_sure_you_want_to_delete">هل أنت متأكد أنك تريد الحذف؟</string>
 
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
