--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -115,6 +115,7 @@
     <string name="delete_image">حذف صورة!</string>
     <string name="are_you_sure_you_want_to_delete">هل أنت متأكد أنك تريد الحذف؟</string>
     <string name="def_bio">لا سيرة ذاتية.</string>
+    <string name="view_location">عرض الموقع</string>
 
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
