--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="delete_image">Delete Image!</string>
     <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
     <string name="def_bio">No Biography.</string>
+    <string name="view_location">View Location</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
