--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="condition">Condition:</string>
     <string name="negotiable">Negotiable</string>
     <string name="details">Details:</string>
-    <string name="scrapyard_name">Scrapyard Name:</string>
+    <string name="scrapyard_name">Scrapyard:</string>
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="clear_all">Clear all</string>
@@ -117,6 +117,8 @@
     <string name="view_location">View Location</string>
     <string name="active_until">Active until</string>
     <string name="edit_part">Edit Part</string>
+    <string name="enter_ip">IP Address (e.g., 192.168.118.25)</string>
+    <string name="bluetooth_mac_address_e_g_8c_6a_3b_05_46_e4">Bluetooth MAC Address (e.g., 8C:6A:3B:05:46:E4)</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
