--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -119,6 +119,7 @@
     <string name="edit_part">Edit Part</string>
     <string name="enter_ip">IP Address (e.g., 192.168.118.25)</string>
     <string name="bluetooth_mac_address_e_g_8c_6a_3b_05_46_e4">Bluetooth MAC Address (e.g., 8C:6A:3B:05:46:E4)</string>
+    <string name="report">Report</string>
 
     <string-array name="spinner">
         <item>Choose Your Account Type</item>
