--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -121,6 +121,9 @@
     <string name="enter_ip">عنوان IP (مثال، 192.168.118.25)</string>
     <string name="bluetooth_mac_address_e_g_8c_6a_3b_05_46_e4">عنوان MAC الخاص بالبلوتوث (مثال، 8C:6A:3B:05:46:E4)</string>
     <string name="report">تقرير</string>
+    <string name="ok">حسنا</string>
+    <string name="diagnostics_configuration">إعداد التشخيص</string>
+    <string name="this_feature_needs_pre_configuration_before_you_can_use_it_please_check_the_info_for_more_information">تحتاج هذه الميزة إلى إعداد مسبق قبل أن تتمكن من استخدامها. يرجى التحقق من "المعلومات" لمزيد من المعلومات.</string>
 
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
