--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -172,6 +172,7 @@
          \t- انقر فوق أحد التقارير لعرض معلومات تفصيلية حول البيانات التشخيصية.\n\n
          باتباع هذه الخطوات، يمكنك استخدام ميزة التشخيص بنجاح في تطبيق AutoMate، والاستفادة من الماسح الضوئي OBD-II وRaspberry Pi للحصول على تقارير تشخيص السيارة وعرضها مباشرة على هاتفك."
     </string>
+    <string name="no_data_found">لاتوجد بيانات!</string>
 
     <string-array name="spinner">
         <item>اختر نوع حسابك</item>
